# GLYCOINFORMATICS_AI

./: .env.example  .gitignore  =2.0  ADVANCED_ENHANCEMENT_REPORT_V2.md  CITATION.cff  CONTRIBUTING.md  DATA_POPULATION_SUMMARY.md  FINAL_IMPLEMENTATION_STATUS.json  GITHUB_UPDATE_SUMMARY.md  GLYCAN_JSON_ANALYSIS_REPORT.md  GLYCOPOST_API_INVESTIGATION.md  GLYCOPOST_AUTHENTICATION_RESOLUTION.md  GLYCOWORKS_INTEGRATION_README.md  IMPLEMENTATION_AUDIT_REPORT.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MULTI_THREADING_ENHANCEMENT_REPORT.md  MULTI_THREADING_SUCCESS_REPORT.md  Makefile  POST_TRAINING_ROADMAP.md  QUICKSTART.sh  README.md  REAL_DATASET_ENHANCEMENT_REPORT_V2.md  REAL_VS_SYNTHETIC_ANALYSIS.md  ULTIMATE_SOLUTION_SUMMARY.md  advanced_enhancement_v2.py  apply_real_enhancements.py  comprehensive_final_implementation.py  create_glycans_view.sql  debug_sparql_namespaces.py  demo_parallel_processing.py  deployment_report.txt  docker-compose.yml  enhance_real_dataset.py  environment.lock.yml  explore_glytoucan_sparql.py  get_wurcs_sequences.py  glycollm_data_integration_results.json  glycollm_test_report.json  integrate_real_data.py  (+31 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/: license_matrix.json  policy.yaml
docker/: api.Dockerfile  compose.yaml  train.Dockerfile
docs/sapelo/: to copy files into sapelo.txt
documentations/: API_DOCUMENTATION.md  COMPLETE_DEPLOYMENT_GUIDE.md  COMPREHENSIVE_DATA_ARCHITECTURE.md  CREDENTIALS_REFERENCE.md  DATA_ARCHITECTURE_ANALYSIS.md  DOCKER_DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  INDEX.md  KNOWLEDGE_GRAPH_SUMMARY.md  MAKEFILE_SUMMARY.md  METRICS_ANALYSIS.md  MKDOCS_INDEX.md  README.md
etl/expectations/: README.md
etl/lineage/: emit_lineage.py
evaluation/benchmarks/: benchmark_runner.py
glyco_platform/: __init__.py
glyco_platform/api/: __init__.py  main.py
glyco_platform_api/: __init__.py
glycogot/: README.md  __init__.py  demo.py  evaluation.py  graph_reasoning.py  integration.py  operations.py  reasoning.py  search_algorithms.py  thought_generators.py
glycokg/: README.md
glycollm/: README.md
glycoreasoner/: README.md  applications.py  integration.py
infrastructure/: README.md
openapi/: glyco_api.yaml
platform/api/: main.py
samples/: clinical_demo.py  got_plan_request.json  spec2struct_request.json
schemas/: glycan_v1.json  spectra_v1.json
scripts/: DATA_PIPELINE_SPECIFICATION.md  bench.py  bulk_data_loader.py  complete_massive_loader.py  focused_data_loader.py  init_sample_data.py  integrate_glycoworks_training.py  integrated_pipeline.py  isolated_training.py  massive_data_loader.py  process_glycoworks_data_only.py  test_glycoworks_processor.py  test_minimal_glycoworks.py  train_glycollm.py  verify_data_loading.py
tests/: test_api.py
(+57 files in other folders)
